# zeus

./: .env.dist  .gitignore  README.md  electron.vite.config.ts  index.html  package-lock.json  package.json  sidecar-test-out.txt  tailwind.config.ts  tsconfig.json  tsconfig.node.json
core/: Cargo.toml  tauri.conf.json
core/capabilities/: default.json
core/icons/: icon.icns
core/scripts/: audio_librosa_summary.py  fix_helpers.py  fix_signatures.py  fix_signatures2.py  gen_dispatch.py  refactor_commands.py  requirements-audio.txt
core/src/: chat_persist.rs  huggingface.rs  lib.rs  state.rs  types.rs
core/src/commands/: attachments.rs  chat.rs  hardware.rs  images.rs  inference.rs  midjourney.rs  mod.rs  models.rs  projects.rs  receipt.rs  runtime.rs  security.rs  settings.rs  sora.rs  tasks.rs
core/src/db/: mod.rs  schema.rs
core/src/inference/: engine.rs  llama_binary.rs  mod.rs
core/src/models/: gguf_meta.rs  manager.rs  mmproj.rs  mod.rs  registry.rs
core/src/sidecar/: context.rs  dispatch.rs  mod.rs  server.rs
core/src/tasks/: schema.rs
electron/main/: index.ts  invoke-router.ts  ipc-native.ts  music-import.ts  photo-gallery-import.ts  protocol.ts  sidecar-proxy.ts  sidecar.ts  window-resize.ts
electron/preload/: index.ts
scripts/: check-renderer-detail.mjs  check-renderer-electron.mjs  check-renderer.mjs  embed-win-icon.mjs  ensure-sidecar.mjs  post-pack-win.mjs  pre-pack-win.mjs  sync-public-assets.mjs  verify-public-assets.mjs  verify-renderer-theme.mjs  verify-theme.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+222 files in other folders)
