[package]
name = "zeus-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "zeus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "zeus-sidecar"
path = "src/bin/zeus_sidecar.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
once_cell = "1"
dirs = "5"
futures-util = "0.3"
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
bytes = "1"
sha2 = "0.10"
hex = "0.4"
sysinfo = { version = "0.32", default-features = false, features = ["multithread", "system"] }
nvml-wrapper = "0.10"
regex = "1.12.3"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
